added basic playlist downloading support and debug output

--- a/Indigo.App/wwwroot/index.html
+++ b/Indigo.App/wwwroot/index.html
@@ -6,12 +6,12 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
 		<link href="./_app/immutable/assets/2.CuOVWFVk.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.o_A4elFK.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.Dg0H-NkE.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.CSXQe3LR.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.Bb8UgD3r.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.V6erG8NB.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.CGOp3BrH.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.HWSWcjOY.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CZqovA3A.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.DBtwYQTy.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.DRR3Oc7O.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.C9oNhuh6.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/props.IHyqD-RZ.js">
@@ -31,15 +31,15 @@
 			
 			<script>
 				{
-					__sveltekit_1622s4e = {
+					__sveltekit_1idp837 = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.o_A4elFK.js"),
-						import("./_app/immutable/entry/app.CZqovA3A.js")
+						import("./_app/immutable/entry/start.CSXQe3LR.js"),
+						import("./_app/immutable/entry/app.DBtwYQTy.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
